--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -51,7 +51,7 @@
  HOL_Dutch_Agriculture_desc: "The Netherlands are marked as one of the most efficient agriculture countries and 2nd largest exporter of agriculture products in the World. We need to invest in our sector to stay in the lead of the world"
  HOL_Plantlab: "Plantlab Creation"
  HOL_Plantlab_desc: "PlantLab is a Dutch agricultural technology company specializing in vertical farming solutions. By harnessing advanced indoor farming techniques, including hydroponics and LED lighting, PlantLab revolutionizes food production, enabling year-round cultivation of high-quality crops in controlled environments. With a focus on sustainability and resource efficiency, PlantLab contributes to the development of urban agriculture and resilient food systems."
- HOL_Kringlooplandbouw: ""Kringlooplandbouw"
+ HOL_Kringlooplandbouw: "Kringlooplandbouw"
  HOL_Kringlooplandbouw_desc: "Smart Dairy Farming leverages digital technologies and data-driven solutions to optimize dairy production processes and improve farm management practices. By incorporating sensors, automation, and predictive analytics, smart dairy farming enhances animal welfare, productivity, and environmental sustainability. With a focus on efficiency and innovation, smart dairy farming enables dairy farmers to make informed decisions and achieve operational excellence in the modern agricultural landscape."
  HOL_Smart_Dairy_Farming: "Smart Dairy Farming"
  HOL_Smart_Dairy_Farming_dec: "Smart Dairy Farming leverages digital technologies and data-driven solutions to optimize dairy production processes and improve farm management practices. By incorporating sensors, automation, and predictive analytics, smart dairy farming enhances animal welfare, productivity, and environmental sustainability. With a focus on efficiency and innovation, smart dairy farming enables dairy farmers to make informed decisions and achieve operational excellence in the modern agricultural landscape."
@@ -66,6 +66,37 @@
  HOL_Lelystad_Airport: "Lelystad Airport Creation"
  HOL_Lelystad_Airport_desc: "The Lelystad Airport expansion project aims to relieve congestion at Schiphol Airport by increasing capacity and enhancing facilities at Lelystad. This includes extending runways, upgrading terminals, and improving passenger services. The project is expected to boost regional connectivity, tourism, and economic growth in Flevoland and surrounding areas."
  HOL_Lelystad_Airport_tt: "§HOost-Nederland§! Receives §H40 Productivity§!"
+ HOL_Provincial_Railways: "Provincial Railways Investments"
+ HOL_Provincial_Railways_desc: "The provincial railways project includes initiatives like the Lelylijn, Wunderline, and the Three-Country Train to improve regional and cross-border connectivity. The Lelylijn proposes a high-speed rail link between the northern provinces and the Randstad. The Wunderline enhances rail services between Groningen and Bremen, Germany, while the Three-Country Train improves rail connectivity between the Netherlands, Belgium, and Germany."
+ HOL_Eindhoven_Brainport: "Eindhoven Brainport"
+ HOL_Eindhoven_Brainport_desc: "The Eindhoven Brainport project transforms Eindhoven into a leading technology and innovation hub. By fostering high-tech industries, supporting research institutions, and encouraging startups, this initiative aims to drive technological advancements and economic growth in the region."
+ HOL_Balanced_National_Development: "Balanced National Development"
+ HOL_Balanced_National_Development_desc: "With the regio now thriving, we aim to ensure balanced national development. Coordinating efforts between the Randstad and the regio will achieve sustainable and equitable growth across the entire country. This includes policies and investments to integrate economic activities and infrastructure development."
+ HOL_Diversify_Groningen_Economy: "Diversify Groningen Economy"
+ HOL_Diversify_Groningen_Economy_desc: "Following the cessation of natural gas extraction in Groningen due to seismic risks, efforts are focused on diversifying the region’s economy. This includes investing in renewable energy, technology sectors, and sustainable agriculture."
+ HOL_Landbouwregio: "Landbouwregio van de 21ste Eeuw"
+ HOL_Landbouwregio_desc: "Transforming agricultural regions into the 21st century involves adopting advanced agricultural technologies and sustainable practices. This initiative focuses on modernizing farming techniques, improving supply chain logistics, and promoting environmentally friendly practices."
+ HOL_Health_Houses: "Health Houses"
+ HOL_Health_Houses_desc: "The Health Houses initiative aims to establish integrated healthcare centers throughout the region, providing comprehensive medical services and promoting public health. These centers will offer primary care, specialized treatments, and wellness programs under one roof, improving access to healthcare and enhancing the quality of life for residents."
+ HOL_Dutch_Economic_Landscape: "Dutch Economic Landscape"
+ HOL_Dutch_Economic_Landscape_desc: "Analyzing and understanding the unique economic landscape of the Netherlands is crucial. By focusing on the strengths and challenges of our diverse regions, we can create tailored economic policies to maximize growth and stability across the country."
+ HOL_Randstad: "Randstad"
+ HOL_Randstad_desc: "The Randstad, consisting of major cities like Amsterdam, Rotterdam, The Hague, and Utrecht, is the economic powerhouse of the Netherlands. By investing in infrastructure and business development, we aim to further enhance its role as the country's economic engine."
+ HOL_Zuidas_Development: "Zuidas Development"
+ HOL_Zuidas_Development_desc: "The Zuidas district in Amsterdam is a key financial center. Expanding its capacity and improving facilities will attract more international businesses and solidify its status as a global financial hub."
+ HOL_Randstad_Rail: "Randstad Rail"
+ HOL_Randstad_Rail_desc: "The RandstadRail project connects The Hague, Rotterdam, and Zoetermeer through an efficient light rail network. Enhancing this network will improve regional connectivity."
+ HOL_Randstad_Rail_tt: "§HWest-Nederland§! Receives §H40 Productivity§!"
+ HOL_Smart_City_Initiative: "Smart City Initiative"
+ HOL_Smart_City_Initiative_desc: "Investing in smart city technologies across the Randstad will make our cities more efficient, sustainable, and attractive to both businesses and residents."
+ HOL_International_Peace_City: "International City of Peace & Justice"
+ HOL_International_Peace_City_desc: "Utilizing The Hague’s status as the International City of Peace and Justice, we will strengthen diplomatic ties and enhance our global influence by hosting international organizations and events."
+ HOL_Randpowerhouse: "Randpowerhouse"
+ HOL_Randpowerhouse_desc: "Through years of strategic investments and visionary planning, the Randstad region has successfully transformed into the 'Randpowerhouse'—the dynamic economic engine of the Netherlands. By enhancing infrastructure, fostering innovation, and improving connectivity among Amsterdam, Rotterdam, The Hague, and Utrecht, the region now stands as a global leader in commerce, culture, and technology. This transformation has not only bolstered the economic output of the Randstad but has also solidified the Netherlands' position as a key player on the European stage, driving national growth and setting new standards for urban development."
+ HOL_Dutch_Industry: "Dutch Industry"
+ HOL_Dutch_Industry_desc: "Dutch Industry embodies the Netherlands' legacy of innovation and excellence across various sectors. With a focus on sustainability, technology, and global competitiveness, Dutch industry remains at the forefront of driving economic growth and prosperity."
+ HOL_Postbank_Fusion: "Postbank-ING Fusion"
+ HOL_Postbank_Fusion_desc: "The fusion of Postbank and ING represents a milestone in Dutch banking history, consolidating two major financial institutions into a single entity. This merger strengthens ING's position as a leading global bank, offering enhanced services and financial solutions to customers worldwide."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
@@ -140,6 +171,8 @@
  HOL_Dutch_Army_Doctrine1_desc: "The Nederlandse Defensievisie is a strategic document outlining the long-term vision and goals for the Dutch Ministry of Defense. It provides a framework for the development and adaptation of the Dutch Armed Forces to meet future security challenges. The Defensievisie focuses on enhancing the military's flexibility, resilience, and technological capabilities in response to an increasingly complex and unpredictable global security environment."
  HOL_Dutch_Army_Doctrine_Change: "Nederlandse Defensievisie Transitie"
  HOL_Dutch_Army_Doctrine_Change_desc: "The Nederlandse Defensievisie Transitie national spirit represents a pivotal phase of transformation for the Dutch Armed Forces. It signifies a period of modernization and adaptation, focusing on developing new capabilities, enhancing cyber defense, and strengthening international cooperation. This spirit highlights the drive to increase the military's resilience and flexibility, preparing it to meet the challenges of the 21st century. It embodies the collective effort to align Dutch defense with evolving global security needs, balancing tradition with innovation."
+ HOL_Economic_Landscape_Start: "Dutch Economic Landscape"
+ HOL_Economic_Landscape_Start_desc: "Analyzing and understanding the unique economic landscape of the Netherlands is crucial. By focusing on the strengths and challenges of our diverse regions, we can create tailored economic policies to maximize growth and stability across the country."
  ### Modifiers
  HOL_Groningen_Herstelt1: "Herstel Groningen"
  HOL_Groningen_Herstelt1_desc: "Herstel Groningen refers to the comprehensive efforts aimed at addressing the damage and revitalizing the region of Groningen, which has been significantly impacted by gas extraction activities. The initiative focuses on repairing and reinforcing homes and infrastructure that have suffered from earthquakes caused by decades of natural gas extraction from the Groningen gas field. Beyond physical restoration, Herstel Groningen also includes economic revitalization projects to support the local economy and improve quality of life for residents. The program is a collaborative effort involving the Dutch government, local authorities, and various stakeholders, aiming to ensure the long-term safety, sustainability, and prosperity of the Groningen region."
