--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -5,7 +5,7 @@
  raul_strenght_power_tt: "§GRaul will strengthen his position in the party§!"
  CUB_allow_elections_tt: "§GElections will be allowed§!"
  CUB_allow_parties_tt: "§GWe will allow some opposition parties§!"
- CUB_migel_comeback: "§YMigel Mario Diaz will become leader of Partido Communista de Cuba§! §G(emerging outlook)§!"
+ CUB_miguel_comeback: "§YMiguel Mario Diaz will become leader of Partido Communista de Cuba§! §G(emerging outlook)§!"
  cuba_alba_tt: "Will Open ALBA decisions"
  CUB_start_democratic_venezuellas: "§!We will start democratic revolution in Venezuela§!"
  CUB_has_updated_the_military_trigger_TT: "Don`t have national spirit §RObsolete Military Force§!"
